------------------------------------
           VERSION 3.3.3
------------------------------------

Bugfixes:
* Fixed potential NullPointerException in annotation scanning code 

------------------------------------
           VERSION 3.3.2
------------------------------------

Bugfixes:
* Fixed invalid usage of Servlet 3.0 API 

------------------------------------
           VERSION 3.3.1
------------------------------------

Features & Enhancements:
* Support of query parameter and action inheritance (#75)
* Development mode can now be enabled by setting the context parameter 'com.ocpsoft.pretty.DEVELOPMENT'

Bugfixes:
* Implemented equals()/hashcode() for LazyExpression (#115)
* Performance: URLPatternParser got created on every call to UrlMapping.getPatternParser()
* Fixed incorrect handling of Spring AOP proxies during bean name lookup - thanks to mbenson for the patch #(119)
* Dynaview: Parameter injection now correctly happens before view determination (#120)
* Fixed decoding of quotation mark character. Thanks to Bruno Aranda for the patch. (#122)
* Use equals() instead of matches() to compare URL with view-id. Thanks to mbenson for bringing this up.
* Prevent rewrite loops by avoiding nested rewrites for forwarded requests (#121)
* Fixed bug causing CDIBeanNameResolver to don't reload configuration in development mode on JBoss AS7

------------------------------------
           VERSION 3.3.0
------------------------------------

Features & Enhancements:
* Performance improvements when running JSF 2.0 in project stage 'development'
* Regular expression performance improvements provided by Yann Simon.
* Ambiguous View IDs are now resolved automatically when using pretty:mappingIds in action method navigation, <h:link> and <h:button> component outcomes
* Ambiguous View IDs may now be resolved manually for outbound URL rewrites by adding '?com.ocpsoft.mappingId=...' to URLs before calling HttpServletResponse.encodeURL(...)