@@ -96,4 +96,19 @@ public class PrettyContextTest extends PrettyFacesTestBase
       assertEquals("bar", prettyContext.getRequestQueryString().getParameter("foo"));
       assertNotNull(prettyContext.getConfig());
    }
+
+   @Test
+   public void testClusterJSessionIdRemovedAutomatically() throws Exception
+   {
+       JSFSession jsfSession = new JSFSession("/;jsessionid=2437ae534134eeae.server1?foo=bar");
+       JSFServerSession server = jsfSession.getJSFServerSession();
+       FacesContext context = server.getFacesContext();
+
+       PrettyContext prettyContext = PrettyContext.getCurrentInstance(context);
+
+       assertTrue(prettyContext.isPrettyRequest());
+       assertEquals("/", prettyContext.getRequestURL().toString());
+       assertEquals("bar", prettyContext.getRequestQueryString().getParameter("foo"));
+       assertNotNull(prettyContext.getConfig());
+   }
 }
